2005-07-17	Istvan Varga	<ivarga@csounds.com>
	* Engine/rdorch.c: fixed crash on missing endin
	* Engine/rdorch.c, Engine/sread.c: fixed error message on $ without
	  macro name
	* H/diskin.h, OOps/diskin.c: fixed soundout crash on Win32 with doubles

2005-07-15	Istvan Varga	<ivarga@csounds.com>
	* removed use of cs.h; replaced with csoundCore.h
	* util1/sortex/smain.c, util1/sortex/xmain.c: fixed compiler warnings
	* OOps/diskin2.c: minor fixes in soundin and diskin2
	* Engine/entry1.c: added soundouts; diskin extended to 24 channels
	* H/diskin.h, OOps/diskin.h:
	  replaced diskin with new implementation based on diskin2 (should
	  fix many problems, and allows up to 24 channels instead of the
	  original limit of 4)
	  fixed bug in soundout that resulted in not writing the last buffer
	  to disk
	  implemented soundouts opcode (stereo soundout)
	* Engine/fgens.c: fixed memory error in GEN20
	* Engine/rdorch.c: minor fix in parsing of comments

2005-07-13	Istvan Varga	<ivarga@csounds.com>
	* InOut/midirecv.c: reset controllers 7-11 to 0 in raw controller mode

2005-06-25 Victor  Lazzarini <Victor.Lazzarini@nuim.ie>

	* Added Opcodes/partials.c and Opcodes/psynth.c, streaming
	  spectral partial track  analysis/synthesis opcodes.

2005-06-23  Victor Lazzarini <Victor.Lazzarini@nuim.ie>

	* Improvements/Fixes to rtcoreaudio.c, addition of non-interleaved
	audio support 
	* Added Opcodes/ifd.c, Instantaneous Frequency Distribution
	spectral streaming opcode. 

2005-06-23  John ffitch  <jpff@codemist.co.uk>

	* Engine/sread.c (sread): Do not attempt to read a name in r if at
	end of line

2005-06-21  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/biquad.c (biquada, biquad, biquadset):
	* OOps/ugens5.c (porset, port, tonset, tone, tonsetx, tonex,
	atone, atonex, rsnset, reson, rsnsetx, resonx, areson): Work in
	doubles internally

2005-06-20  John ffitch  <jpff@codemist.co.uk>

	* InOut/OSCrecv.c (OSC_listdeinit): Fixed a typo
